<resources>
    <string name="app_name">BooksClubsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_book_search">Books search</string>
    <string name="menu_book_gallery">My books</string>

    <string name="enter_login">Enter login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_empty_login">Please enter email and password</string>
    <string name="error_empty_reg">Please enter email, password and login</string>
    <string name="error_not_equal_reg">Passwords are not the same</string>
    <string name="log_in">Log in</string>
    <string name="registration_text">Registration</string>
    <string name="log_in_btn">Log in</string>
    <string name="reg_btn">Create new account</string>
    <string name="btn_to_reg">New here? Join us</string>
    <string name="btn_to_log_in">Back to logging in</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="book_gallery">My books</string>
    <string name="search_book_btn">Search books</string>
    <string name="search_book_et">Write title or author</string>

    <string name="error_on_search">Error getting documents: </string>
    <string name="error_on_empty_search">Enter text to search</string>

    <string name="book_detailed_autor_textv">Author: </string>
    <string name="book_detailed_genres_textv">Genres: </string>

    <string name="book_library_empty_text">You do not have any books yet, add or create one!</string>
    <string name="book_library_add_book_btn">Add Book</string>
    <string name="book_library_create_book_btn">Create Book</string>
</resources>