<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navtest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.navtest.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_book_search"
        android:name="com.example.navtest.ui.bookSearch.BookSearchFragment"
        android:label="@string/menu_book_search"
        tools:layout="@layout/fragment_book_search" >
        <action android:id="@+id/action_nav_book_search_to_nav_book_detail"
            app:destination="@id/nav_book_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.navtest.ui.login.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.navtest.ui.register.RegisterFragment"
        android:label="@string/registration_text"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_book_gallery"
        android:name="com.example.navtest.ui.userLib.UserLibraryFragment"
        android:label="@string/book_gallery"
        tools:layout="@layout/fragment_user_library" >
        <action android:id="@+id/action_nav_book_gallery_to_nav_book_detail"
            app:destination="@id/nav_book_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/nav_book_detail"
        android:name="com.example.navtest.ui.bookdetail.BookDetailFragment"
        android:label="Book Detail"
        tools:layout="@layout/fragment_book_detail">
        <action android:id="@+id/action_nav_book_detail_to_nav_book_gallery"
            app:destination="@id/nav_book_gallery"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action android:id="@+id/action_nav_book_detail_to_nav_book_search"
            app:destination="@id/nav_book_search"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <argument
            android:name="bookTitle"
            app:argType="string" />
        <argument
            android:name="bookAuthor"
            app:argType="string" />
        <argument
            android:name="bookGenre"
            app:argType="string" />
        <argument
            android:name="bookCoverUrl"
            app:argType="string" />
    </fragment>

</navigation>