<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.userLib.UserLibraryFragment">

    <TextView
        android:id="@+id/tvNoBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/book_library_empty_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAddBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/main_red"
        android:fontFamily="@font/inter"
        android:text="@string/book_library_add_book_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:visibility="gone"
        app:cornerRadius="15dip" />

    <Button
        android:id="@+id/btnCreateBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/main_red"
        android:fontFamily="@font/inter"
        android:text="@string/book_library_create_book_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:visibility="gone"
        app:cornerRadius="15dip" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>